2007-03-24  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Call SetBounds with BoundsSpecified.None instead
	of using SetImplicitBounds.
	* TableLayout.cs: Call SetBounds with BoundsSpecified.None instead of
	modifying Control.Bounds.

2007-02-28  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Use ClientRectangle instead of DisplayRectangle
	to layout children because DisplayRectangle can be overridden.
	[Fixes bug #80917]

2007-02-14  Jonathan Pobst  <monkey@jpobst.com>

	* FlowLayout.cs: Add support for laying out ToolStrips, which
	use ToolStripItems instead of Controls.

2007-01-29  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: MdiClient should always be added last, it should
	never Dock:Fill under other controls.  [Fixes a part of bug #80223]

2007-01-20  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Remove special loop for Dock.Fill and handle
	it with the other docking code.  [Fixes bug #80227]

2007-01-09  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Use PreferredSize for non-Anchor/Dock controls. (2.0)
	Change a SetBounds to SetImplicitBounds.

2007-01-07  Jonathan Pobst  <monkey@jpobst.com>

	* ArrangedElementCollection.cs: Make list internal.

2006-12-28  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: split out the various parts (docking,
	anchoring) into separate methods.  make use of the
	Control.ControlLayoutType property, as well as
	Control.VisibleInternal (and fix a couple of unit tests which were
	broken due to use of Visible here.)

2006-12-25  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: invert the tests for anchoring to make the
	code a little more compact.

2006-12-25  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: remove references to dist_left and dist_top.
	just use left and top instead.

2006-12-23  Chris Toshok  <toshok@ximian.com>

	* TableLayoutSettingsTypeConverter.cs: new file, a skeleton.

2006-12-23  Chris Toshok  <toshok@ximian.com>
